crates/ruff_python_parser/tests/snapshots/invalid_syntax@expressions__parenthesized__missing_closing_paren_1.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/invalid/expressions/parenthesized/missing_closing_paren_1.py
snapshot_kind: text
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..137,
        body: [
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 129..137,
                    value: BinOp(
                        ExprBinOp {
                            node_index: NodeIndex(None),
                            range: 132..137,
                            left: Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 132..133,
                                    id: Name("x"),
                                    ctx: Load,
                                },
                            ),
                            op: Add,
                            right: Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 136..137,
                                    id: Name("y"),
                                    ctx: Load,
                                },
                            ),
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
4 | (
5 | 
6 | x + y
  |       Syntax Error: unexpected EOF while parsing
  |
